eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-of-asia-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: "api.bankofasia.org"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: bank-of-asia-api-service
                port:
                  number: 80
  tls:
    - hosts:
        - api.bankofasia.org
      secretName: bank-of-asia-api-cert
